# RPGgamedevMainProj

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
libs/entt/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/src/: glad.c
libs/miniaudio/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
res/scripts/: test.lua  test2.lua
res/shaders/: shader-old.fs  shader.fs  shader.vs  shader_gui.fs  shader_gui.vs
src/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  ChronoGuard.h  Chrono_Guard.h  Collision.cpp  Collision.h  Data.h  Draw.cpp  ElementsForRandSprites.cpp~  ElementsForRandSprites.h  GL_Initializasion.h  GL_Window.h  Game.cpp  Game.h  GameMain.cpp  Game_Shell.h  IKeyInputNotifier.h  IUnit.h  Input.cpp  Input.h  KeyInputNotifier.cpp  Key_Input_Notifier.cpp  Key_Input_Notifier.h  Key_Input_Notifier_Interface.h  Map.cpp  Map.h  MapObject.cpp  MapObject.h  MapObjects.cpp  MapObjects.h  Map_Objects.cpp  Map_Objects.h  Map_Source.h  Player.cpp  Player.h  Player_Implementation.cpp  Player_Implementation.h  RTime.h  (+16 more)
src/.clangd/index/: Camera.cpp.089D874B6DCAB3D7.idx  Camera.h.794121B62C7C09C4.idx  (+31 more)
src/audio/: AudioDevice.cpp  AudioDevice.h  Sound.cpp  Sound.h
src/graphics/: Buffer.cpp  Buffer.h  Camera2D.cpp  Camera2D.h  Font.cpp  Font.h  GLObject.h  IGLObject.h  Rect.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  Text.cpp  Text.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/scene/: Components.h  Entity.cpp  Entity.h  Hierarchy.cpp  Hierarchy.h  LuaScript.h  Scene.cpp  Scene.h  Script.h  TileMapComponent.h
src/scripts/: DebugInfoScript.h  FPSCounterScript.h  MusicScript.h  PlayerScript.h  PumpkinScript.h  TextScript.h  WorldGenScript.h  WorldMapScript.h
src/useless_files/: Draw.h  ElementsForRandSprites.h~  Game_Shell.h  MapSource.h  Sprite_RandSet.h~  TEMP.cpp
src/utils/: Coordinate.h  OpenSimplexNoise.cpp  OpenSimplexNoise.h  ScriptContext.cpp  ScriptContext.h  Stack.cpp  Stack.h  Types.h  WorldConst.h
src/window/: Window.cpp  Window.h
src/world/: Chunk.cpp  Chunk.h  Tile.h  TileMap.cpp  TileMap.h  World.cpp  World.h
(+59 files in other folders)
